# Multi_Agent_Systems_with_CrewAI

./: Ex01.py  Ex02.py
Module3/deep_research_agent/: README.md  pyproject.toml
Module3/deep_research_agent/src/deep_research_crew/: crew.py  main.py
Module3/deep_research_agent/src/deep_research_crew/config/: agents.yaml  tasks.yaml
Module3/deep_research_agent/src/deep_research_crew/gaurdrails/: gaurdrails.py
