[project]
name = "deep_research_crew"
version = "0.1.0"
description = "deep_research_crew using crewAI"
authors = [{ name = "Mohammed Roqa", email = "mohammed.roqa@pm.me" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0",
    "exa-py==1.16.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[project.scripts]
deep_research_crew = "deep_research_crew.main:run"
run_crew = "deep_research_crew.main:run"
train = "deep_research_crew.main:train"
replay = "deep_research_crew.main:replay"
test = "deep_research_crew.main:test"
run_with_trigger = "deep_research_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
